--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@angular/router": "~13.0.0",
     "@capacitor/android": "^3.3.3",
     "@capacitor/app": "1.0.7",
+    "@capacitor/camera": "^1.2.2",
     "@capacitor/core": "3.3.3",
     "@capacitor/haptics": "1.1.3",
     "@capacitor/keyboard": "1.2.0",
     "@capacitor/status-bar": "1.0.6",
     "@ionic/angular": "^6.0.0",
+    "@ionic/pwa-elements": "^3.1.1",
     "rxjs": "~6.6.0",
     "swiper": "^7.4.1",
     "tslib": "^2.2.0",
